apply plugin: 'com.android.application'
apply from: "../artifacts.gradle"

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.3"
    ndkVersion "21.3.6528147"

    defaultConfig {
        applicationId "com.craxiom.networksurveyplus"
        minSdkVersion 26
        targetSdkVersion 29
        versionCode 1
        versionName "0.1.0-SNAPSHOT"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    sourceSets {
        main {
            jniLibs.srcDirs = ['libs']
        }
    }

    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

    externalNativeBuild {
        ndkBuild {
            path file('jni/Android.mk')
        }
    }

    buildFeatures {
        viewBinding true
        dataBinding true
    }

    packagingOptions {
        exclude 'log4j.properties'
    }

    splits {
        abi {
            enable true
            reset()
            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
            universalApk true
        }
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'com.jakewharton.timber:timber:4.7.1'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'com.google.guava:guava:29.0-android'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
    implementation 'androidx.navigation:navigation-fragment:2.3.0'
    implementation 'androidx.navigation:navigation-ui:2.3.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    // Preon dependencies
    /*implementation(group: 'org.codehaus.preon', name: 'preon-io', version: '1.1.1-SNAPSHOT')
    implementation(group: 'org.codehaus.preon', name: 'preon-binding', version: '1.1.1-SNAPSHOT')
    implementation(group: 'org.codehaus.preon', name: 'preon-el', version: '1.1.1-SNAPSHOT')*/
    //implementation group: 'nl.flotsam.pecia', name: 'pecia', version: peciaVersion
    //implementation group: 'org.antlr', name: 'antlr-runtime', version: antlrVersion

    testImplementation 'junit:junit:4.13'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

}